# Video_Audio

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peakmain/video_audio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: demo.h264
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: log.h  native-lib.h
app/src/main/cpp/include/crash/: CrashAnalyser.h  JNIBridge.h  SignalHandler.h  Utils.h
app/src/main/cpp/include/mmkv/: MMKV.h  ProtoBuf.h
app/src/main/cpp/src/crash/: CrashAnalyser.cpp  JNIBridge.cpp  SignalHandler.cpp  Utils.cpp  stringprintf.cpp
app/src/main/cpp/src/mmkv/: MMKV.cpp  ProtoBuf.cpp
app/src/main/java/com/peakmain/video_audio/: App.kt  MainActivity.kt
app/src/main/java/com/peakmain/video_audio/activity/: Camera2XActivity.kt  CameraActivity.kt  MMKVActivity.kt  ProjectScreenAcceptActivity.kt  ProjectScreenActivity.kt  ProjectScreenSendActivity.kt  SimpleActivity.kt  VideoAcceptVideoCallActivity.kt  VideoSendVideoCallActivity.kt
app/src/main/java/com/peakmain/video_audio/basic/: BaseActivity.kt  BaseRecyclerStringAdapter.kt
app/src/main/java/com/peakmain/video_audio/simple/: BasicSurfaceHolderCallback.kt  H264Player.java
app/src/main/java/com/peakmain/video_audio/utils/: Camera2Helper.kt  CameraHelper.kt  CameraXHelper.kt  CrashUtils.kt  FileUtils.java  Utils.java  VideoAudioUtils.kt
app/src/main/res/layout/: activity_accept_video_call.xml  activity_camera.xml  activity_camera2x.xml  activity_h264_player.xml  activity_main.xml  activity_mmkv.xml  activity_project_screen.xml  activity_send_video_call.xml  item_recyclerview_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/peakmain/video_audio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
javaLib/src/main/java/com/peakmain/javalib/: H264Parse.java
(+14 files in other folders)
